# integrations

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
admin_ui/: app.py
alembic/: env.py
alembic/versions/: 1f6f72eb0400_add_stage_map.py  2d8d72e8bdbc_add_config_tables.py  6b62897e_add_stage_map.py  6c902fdc0f2a_add_pr_notification_state.py  7c3987160332_add_dead_letter.py  9719ad73c88b_initial_schema.py  c015cc994f32_add_last_reminder_at.py
integration/: admin.py  backfill.py  config.py  config_service.py  db.py  deps.py  discord_bot.py  logging_config.py  metrics.py  models.py  pr_ready.py  queue.py  reminders.py  retry.py  webhooks.py  worker.py
integration/clients/: __init__.py  github.py  plane.py
integration/handlers/: _stage.py  _sync.py  github.py  plane.py
ralph/: prd.json  progress.txt
scripts/: seed_mappings.py
scripts/ralph/: .last-branch  prd.json  progress.txt  prompt.md  ralph.sh
tasks/: prd-plane-github-discord-integration.md
tests/: test_admin.py  test_alembic.py  test_backfill.py  test_config_service.py  test_github_client.py  test_handler_comment_sync.py  test_handler_discord_notify.py  test_handler_github_issue_opened.py  test_handler_plane_card_created.py  test_handler_pr_merged.py  test_handler_pr_pending_check_run.py  test_handler_pr_thread.py  test_handler_state_sync.py  test_handler_sync.py  test_metrics.py  test_models.py  test_plane_client.py  test_pr_ready.py  test_reminder_cron.py  test_retry.py  test_webhooks_github.py  test_webhooks_plane.py
